feat(creation): added spinner when creating huge notes

--- a/packages/app-client/src/locales/en.json
+++ b/packages/app-client/src/locales/en.json
@@ -75,7 +75,8 @@
         "title": "Drop files here",
         "description": "Drag and drop files here to attach them to the note"
       },
-      "create": "Create note"
+      "create": "Create note",
+      "creating": "Creating note..."
     },
     "success": {
       "title": "Note created successfully",
