--- a/packages/app-client/src/locales/es.json
+++ b/packages/app-client/src/locales/es.json
@@ -9,7 +9,10 @@
   },
   "navbar": {
     "new-note": "Nueva nota",
+    "github": "GitHub",
+    "language": "",
     "theme": {
+      "theme": "",
       "light-mode": "Modo claro",
       "dark-mode": "Modo oscuro",
       "system-mode": "Sistema"
