--- a/packages/app-client/src/locales/fr.json
+++ b/packages/app-client/src/locales/fr.json
@@ -9,7 +9,10 @@
   },
   "navbar": {
     "new-note": "Nouvelle note",
+    "github": "GitHub",
+    "language": "",
     "theme": {
+      "theme": "",
       "light-mode": "Mode clair",
       "dark-mode": "Mode sombre",
       "system-mode": "Mode système"
