--- a/packages/app-client/src/locales/ru.json
+++ b/packages/app-client/src/locales/ru.json
@@ -9,7 +9,10 @@
   },
   "navbar": {
     "new-note": "Новая заметка",
+    "github": "GitHub",
+    "language": "",
     "theme": {
+      "theme": "",
       "light-mode": "Светлая тема",
       "dark-mode": "Темная тема",
       "system-mode": "Система"
