fix(layout): adjust new note button on mobile (#182)
* fix(layout) Adjust new note button on mobile

* Use hamburger on mobile

* Continue building mobile nav bar menu

* Lint

* Fix Dropdown menu sub trigger

* Revert "fix(layout) Adjust new note button on mobile"

This reverts commit 37c63c875aab2a3d1429f71cbcbc21a051738738.

* Remove empty keys

--- a/packages/app-client/src/locales/de.json
+++ b/packages/app-client/src/locales/de.json
@@ -9,6 +9,7 @@
   },
   "navbar": {
     "new-note": "Neue Notiz",
+    "github": "GitHub",
     "theme": {
       "light-mode": "Light mode",
       "dark-mode": "Dark mode",
