--- a/packages/app-client/src/locales/es.json
+++ b/packages/app-client/src/locales/es.json
@@ -9,6 +9,7 @@
   },
   "navbar": {
     "new-note": "Nueva nota",
+    "github": "GitHub",
     "theme": {
       "light-mode": "Modo claro",
       "dark-mode": "Modo oscuro",
