--- a/packages/app-client/src/locales/ru.json
+++ b/packages/app-client/src/locales/ru.json
@@ -9,6 +9,7 @@
   },
   "navbar": {
     "new-note": "Новая заметка",
+    "github": "GitHub",
     "theme": {
       "light-mode": "Светлая тема",
       "dark-mode": "Темная тема",
