Fix language of app title

--- a/packages/app-client/src/locales/vi.json
+++ b/packages/app-client/src/locales/vi.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "Đính kèm",
+    "title": "Enclosed",
     "description": "Gửi ghi chú riêng tư và an toàn"
   },
   "insecureContextWarning": {
