feat(i18n): enhance localisation with new translations and improved language detection

--- a/packages/app-client/src/locales/en.json
+++ b/packages/app-client/src/locales/en.json
@@ -11,6 +11,11 @@
     "new-note": "New note",
     "github": "GitHub",
     "language": "Language",
+    "github-repository": "GitHub repository",
+    "documentation": "Documentation",
+    "change-theme": "Change theme",
+    "menu-icon": "Menu icon",
+    "change-language": "Change language",
     "theme": {
       "theme": "Theme",
       "light-mode": "Light mode",
@@ -65,7 +70,10 @@
       "placeholder": "Type your note here...",
       "password": {
         "label": "Note password",
-        "placeholder": "Password..."
+        "placeholder": "Password...",
+        "hide-password": "Hide password",
+        "show-password": "Show password",
+        "generate-random-password": "Generate random password"
       },
       "expiration": "Expiration delay",
       "delays": {
