feat(config): added the option to create note without expiration (#341)

--- a/packages/app-client/src/locales/en.json
+++ b/packages/app-client/src/locales/en.json
@@ -76,6 +76,7 @@
         "generate-random-password": "Generate random password"
       },
       "expiration": "Expiration delay",
+      "no-expiration": "The note never expires",
       "delays": {
         "1h": "1 hour",
         "1d": "1 day",
