feat(note-view): added loading state

--- a/packages/app-client/src/locales/en.json
+++ b/packages/app-client/src/locales/en.json
@@ -114,6 +114,7 @@
     }
   },
   "view": {
+    "loading": "Loading note...",
     "note-content": "Note content",
     "assets": {
       "download": "Download",
